# delta-hil

./: .gitignore  README.md  pyproject.toml
assets/IRB360_6-1600-STD-4D_rev05_STEP_J/: IRB360_6-1600-STD-4D_rev03_LA1_CL_CAD.STEP  IRB360_6-1600-STD-4D_rev03_LA1_CU_CAD.STEP  IRB360_6-1600-STD-4D_rev03_LA2_CL_CAD.STEP  IRB360_6-1600-STD-4D_rev03_LA2_CU_CAD.STEP  IRB360_6-1600-STD-4D_rev03_LA3_CL_CAD.STEP  IRB360_6-1600-STD-4D_rev03_LA3_CU_CAD.STEP  IRB360_6-1600-STD-4D_rev03_RevoluteLinkBase_CAD.STEP  IRB360_6-1600-STD-4D_rev03_RevoluteLinkLower_CAD.STEP  IRB360_6-1600-STD-4D_rev03_RevoluteLinkPlate_CAD.STEP  IRB360_6-1600-STD-4D_rev03_RevoluteLinkUpper_CAD.STEP  IRB360_6-1600-STD-4D_rev03_UA1_CAD.STEP  IRB360_6-1600-STD-4D_rev03_UA2_CAD.STEP  IRB360_6-1600-STD-4D_rev03_UA3_CAD.STEP  IRB360_6-1600-STD-4D_rev04_LA1_1_CAD.step1.STEP  IRB360_6-1600-STD-4D_rev04_LA1_2_CAD.step1.STEP  (+4 more)
docs/: blog_digital_twin.md  twincat_cell_program.md  twincat_gvl_spec.md  twincat_program.md
scripts/: animate_irb360.py  build_irb360.py  build_robot_glb.py  cell_animation.py  cell_layout.py  check_cad.py  dump_part.py  inspect_cell.py  inspect_usd.py  pose_irb360.py  render_irb360.py  run_twincat_cell.py  run_twincat_loop.py  run_twincat_mock.py  run_twincat_render.py  run_web_cell.py  soak_rtf.py  step_to_usd.py
tests/: test_calibration.py  test_cell_plant.py  test_delta_ik.py  test_irb360_pose.py  test_isaac_plant_guard.py  test_kinematic_guard.py  test_loop_closes.py  test_meters.py  test_mujoco_cell_plant.py  test_rapier_cell_plant.py  test_twincat_guard.py  test_twincat_mapping.py
(+59 files in other folders)
